Agregado link a app store

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body {
 			</div>
 			</header>
 			<section id="store">
-				<img src="images/store.png">
+				<a href="https://geo.itunes.apple.com/ve/app/pictune-app/id983298331?mt=8&uo=6" target="itunes_store" style="display:inline-block;overflow:hidden;background:url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.png) no-repeat;width:165px;height:40px;@media only screen{background-image:url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.svg);}"></a>
 				<p>
 					Haz una foto<br>
 					Transforma su aspecto<br>
