--- a/index.html
+++ b/index.html
@@ -6,161 +6,104 @@
 <meta name="description" content="An easy and fun way to share music created by you from images.">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="shortcut icon" href="images/pictune.ico">
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link href='css/style.css' rel='stylesheet' type='text/css'>
 <style>
 body {
 	background-image: url("images/fondo PRINCIPAL.png");
 }
-#store{
-	margin-left: 115px;
-	margin-top: 10px;
-}
-#store a{
-	display:inline-block;
-	overflow:hidden;
-	background:url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.png) no-repeat;
-	width:165px;
-	height:40px;
-	@media only screen{
-		background-image:url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.svg);
-	}
-}
-#title{
-	height: 70px; 
-	text-align: center;
-	margin-bottom: 40px;
-	color: #000;
-}
-h4{
-	margin-top: 20px;
-	line-height: 1.2;
-	font-size: 2em;
-}
-
-@media screen and (max-width: 950px) {
-	h4{
-		font-size: 1em;
-	}
-}
-@media screen and (max-width: 850px) {
-	body {
-		background-size: cover;
-	}
-	#logo{
-		margin-left: 5px;
-		margin-top: 20px;
-	}
-	#logo img{
-		width: 170px;
-	}
-	#central_section {
-		left: 0px;
-		top: 160px;
-		margin-left: 30px;
-	}
-	#title{
-		height: inherit;
-		margin-left: 30px;
-		margin-bottom: 10px;
-		text-align: left;
-	}
-	h4{
-		margin-top: 0px;
-		line-height: 1;
-		font-size: 1em;
-	}
-	#iphone {
-		margin-top: 20px;
-	}
-	#social{
-		top: 10px;
-		right: 5px;
-		margin-left: 170px;
-	}
-	nav{
-		left: 30px;
-	}
-	#store p{
-		margin-top: 0;
-	}
-	#store p{
-		display: none;
-	}
+@media (max-width: 480px) {
+	#title{ font-size: 1.3em !important;}
 }
 </style>
 </head>
 <body>
-	<div id="wrapper">
-		<aside>
-			<header>
-			<div id="logo">
-				<a href="index.html"><img src="images/Pictune logo.png"></a>
+	<div class="container-fluid">
+		<div class="row">
+			<div id="logo" class="col-md-3" align="center">
+				<a href="index.html"><img class="img-responsive" src="images/Pictune logo.png"></a>
 			</div>
-			</header>
-			<section id="store">
+			<div id="title" class="col-md-7" align="center">
+				<p>Una forma r&aacute;pida y divertida de compartir<br>
+					m&uacute;sica creada por ti a partir de im&aacute;genes</p>
+			</div>
+			<div class="col-md-2 hidden-xs" align="center">
+				<section>
+					<ul id="social">
+						<li><a href="https://www.facebook.com/PictuneApp" target="_blank"><img src="images/icons/Bfacebook.png"></a></li>
+						<li><a href="https://www.youtube.com/user/PictuneMe/" target="_blank"><img src="images/icons/Byoutube.png"></a></li>
+						<li><a href="https://twitter.com/pictuneApp" target="_blank"><img src="images/icons/Btwitter.png"></a></li>
+						<li><a href="https://instagram.com/pictuneApp" target="_blank"><img src="images/icons/Binstagram.png"></a>
+						</li>
+						<li><a href="mailto:contact@pictune.me" target="_blank"><img src="images/icons/Bemail.png"></a></li>
+					</ul>
+				</section>
+			</div>
+		</div>
+
+		<div class="row">
+			<div id="store" class="col-md-3" align="center">
 				<a href="https://geo.itunes.apple.com/ve/app/pictune-app/id983298331?mt=8&uo=6" target="itunes_store"></a>
-				<p>
-					Haz una foto<br>
-					Transforma su aspecto<br>
-					escucha c&oacute;mo suena<br>
-					y publica en Pictune<br>
-					Es una nueva manera de ver<br>
-					y escuchar el mundo.
-				</p>
-			</section>
-		</aside>
-		<section id="central_section">
-			<div id="title">
-				<h4>Una forma r&aacute;pida y divertida de compartir<br>
-					m&uacute;sica creada por ti a partir de im&aacute;genes</h4>
 			</div>
-			<section id="iphone">
-				<img src="images/celular.png">
-				<div id="carousel">
-					<img src="images/slide1.jpg">
-					<img src="images/slide2.jpg">
-					<img src="images/slide3.jpg">
-					<img src="images/slide4.jpg">
-					<img src="images/slide5.jpg">
-					<img src="images/slide6.jpg">
-				</div>
-			</section>
-		</section>
-		<section style="position: relative; left: 330px;">
-			<nav>
-				<a href="salamendoza/Grid.html" target="_blank">PICTUNES</a> |
-				<a href="faq.html">SOPORTE</a>
-			</nav>
-		</section>
-		<section>
-			<ul id="social">
-				<li><a href="https://www.facebook.com/PictuneApp" target="_blank"><img src="images/icons/facebook.png"></a></li>
-				<li><a href="https://www.youtube.com/user/PictuneMe/" target="_blank"><img src="images/icons/youtube.png"></a></li>
-				<li><a href="https://twitter.com/pictuneApp" target="_blank"><img src="images/icons/twitter.png" target="_blank"></a></li>
-			</ul>
-		</section>
+			<div id="iphone" class="col-md-7" align="center">
+				<img class="img-responsive" src="images/view1.png">
+				<img class="img-responsive" src="images/view2.png">
+				<img class="img-responsive" src="images/view3.png">
+				<img class="img-responsive" src="images/view4.png">
+				<img class="img-responsive" src="images/view5.png">
+				<p id="description">
+					Haz una foto, transforma su aspecto, escucha c&oacute;mo suena y publica en Pictune.<br>
+					Es una nueva manera de ver y escuchar el mundo.
+				</p>
+        	</div>
+        	<div class="col-md-2 visible-xs-block" align="center">
+				<section>
+					<ul id="social">
+						<li><a href="https://www.facebook.com/PictuneApp" target="_blank"><img src="images/icons/Bfacebook.png"></a></li>
+						<li><a href="https://www.youtube.com/user/PictuneMe/" target="_blank"><img src="images/icons/Byoutube.png"></a></li>
+						<li><a href="https://twitter.com/pictuneApp" target="_blank"><img src="images/icons/Btwitter.png"></a></li>
+						<li><a href="https://instagram.com/pictuneApp" target="_blank"><img src="images/icons/Binstagram.png"></a>
+						</li>
+						<li><a href="mailto:contact@pictune.me" target="_blank"><img src="images/icons/Bemail.png"></a></li>
+					</ul>
+				</section>
+			</div>
+    	</div>
+		<div class="row">
+		<div>
+			<div id="menu" align="center">
+				<nav>
+					<a href="salamendoza/Grid.html" target="_blank"><img src="images/yellow.png">PICTUNES</a> |
+					<a href="faq.html"><img src="images/blue.png">SOPORTE</a> <!--|
+					<a href="salamendoza/Grid.html" target="_blank"><img src="images/pink.png">CONT&Aacute;TANOS </a>-->
+				</nav>
+			</div>
+		</div>
 	</div>
+	</div>
+	<!-- jQuery library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<!-- Latest compiled JavaScript -->
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function(){
+			var counter = 0;
+			var listItems = $("#iphone").find("img");
+			function showImage(counter){
+				$(listItems).hide();
+				$(listItems[counter]).fadeToggle();
+			};
+			showImage(counter);
+			setInterval(function(){ showImage(counter = ((counter + 1) % 5)); }, 5000);
+		});
+	</script>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-64314784-1', 'auto');
+		ga('send', 'pageview');
+	</script>
 </body>
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script type="text/javascript">
-$(document).ready(function(){
-	var counter = 0;
-	var listItems = $("#carousel").find("img");
-	function showImage(counter){
-		$(listItems).hide();
-		$(listItems[counter]).fadeToggle();
-	};
-	showImage(counter);
-	setInterval(function(){ showImage(counter = ((counter + 1) % 6)); }, 5000);
-});
-</script>
-<script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	ga('create', 'UA-64314784-1', 'auto');
-	ga('send', 'pageview');
-</script>
 </html> 
