Nuevo link de descarga de la app.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {
 
 		<div class="row">
 			<div id="store" class="col-md-3" align="center">
-				<a href="https://geo.itunes.apple.com/ve/app/pictune-app/id983298331?mt=8&uo=6" target="itunes_store"></a>
+				<a href="https://geo.itunes.apple.com/us/app/pictune-app/id983298331?mt=8" target="itunes_store"></a>
 			</div>
 			<div id="iphone" class="col-md-7" align="center">
 				<img class="img-responsive" src="images/view1.png">
