Home page en ingles

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ body {
 				<a href="index.html"><img class="img-responsive" src="images/Pictune logo.png"></a>
 			</div>
 			<div id="title" class="col-md-7" align="center">
-				<p>Una forma r&aacute;pida y divertida de compartir<br>
-					m&uacute;sica creada por ti a partir de im&aacute;genes</p>
+				<p>A quick and fun way to share music<br>
+					created from pictures by you</p>
 			</div>
 			<div class="col-md-2 hidden-xs" align="center">
 				<section>
@@ -52,8 +52,8 @@ body {
 				<img class="img-responsive" src="images/view4.png">
 				<img class="img-responsive" src="images/view5.png">
 				<p id="description">
-					Haz una foto, transforma su aspecto, escucha c&oacute;mo suena y publica en Pictune.<br>
-					Es una nueva manera de ver y escuchar el mundo.
+					Take a picture, change its aspect, listen how it sounds and share it on Pictune.<br>
+					It’s a new way of seeing and listening to the world.
 				</p>
         	</div>
         	<div class="col-md-2 visible-xs-block" align="center">
@@ -73,8 +73,8 @@ body {
 		<div>
 			<div id="menu" align="center">
 				<nav>
-					<a href="salamendoza/Grid.html" target="_blank"><img src="images/yellow.png">PICTUNES</a> |
-					<a href="faq.html"><img src="images/blue.png">SOPORTE</a> <!--|
+					<a href="salamendoza/Grid.html" target="_blank"><img src="images/yellow.png">SALA MENDOZA PRESENTATION</a> |
+					<a href="faq.html"><img src="images/blue.png">SUPPORT</a> <!--|
 					<a href="salamendoza/Grid.html" target="_blank"><img src="images/pink.png">CONT&Aacute;TANOS </a>-->
 				</nav>
 			</div>
