--- a/faq.html
+++ b/faq.html
@@ -42,7 +42,7 @@ body {
 			<div class="col-md-3" align="center">
 				<div id="v-menu">
 					<ul id="tab-menu" class="nav nav-stacked">
-						<li><span id="title"><img width="30px" src="images/HOME.png">Soporte</span></li>
+						<li><span id="title"><img width="30px" src="images/HOME.png">Support</span></li>
 						<li>
 							<a id="faq_link" data-toggle="tab" href="#faq">FAQ
 							<img src="images/selection.png">
@@ -60,6 +60,34 @@ body {
 			</div>
 			<div  class="col-md-7 tab-content">
 				<div id="faq" class="content tab-pane fade in active">
+					<h4>FREQUENTLY ASKED QUESTIONS (FAQ)</h4><br>
+					<h5>What is Pictune?</h5>
+					Pictune is a quick, great and fun way of composing music through images. 
+					Take a picture and listen how it sounds. It is a new way of seeing and 
+					listening to the world. 
+					Currently, we are developing more functions into Pictune, so that you can 
+					compose the music that feels just right to you. Additionally, we wish you to 
+					share your creations with other people around the world. That is why we 
+					are also building a social network where it will be easy to publish your pictunes
+					and see your friend’s pictunes. 
+					<br><br>
+					<h5>How much does it cost?</h5>
+					Pictune is available for free at Apple’s App Store.
+					<br><br>
+					<h5>How did the idea come up?</h5>
+					We love to take pictures and we love music. We believe that music is 
+					a universal language that we can use to communicate without words. 
+					Normally, in order to compose, one needs technical knowledge and years of 
+					study. Pictune is a simple way to get anybody closer to musical composition. 
+					Through something as easy as taking a picture with a mobile device and editing it, 
+					anybody can compose music.
+					<br><br>
+					<h5>How can I share my pictunes?</h5>
+					At this moment, we are developing new functions so that you can share your 
+					Pictunes in our social network and in other communities as well, such as Twitter, Instagram 
+					and Facebook. Furthermore, you will be able to store each Pictune you make in your 
+					mobile phone.
+					<!--
 					<h4>PREGUNTAS FRECUENTES (FAQ)</h4><br>
 					Esta es una breve lista de las preguntas m&aacute;s frecuentes que recibimos. Para<br>
 					obtener informaci&oacute;n sobre Pictune, o si necesitas comunicarte con nosotros, por favor<br>
@@ -96,6 +124,7 @@ body {
 					<h5>&iquest;Estamos buscando talento?</h5>
 					Claro que s&iacute;! Si eres un ingeniero o dise&ntilde;ador talentoso, nos guatar&iacute;a hablar<br>
 					contigo. La mejor forma de contactarnos es enviando un email a: <a href="mailto:contact@pictune.me" target="_top">contact@pictune.me</a>
+					-->
 				</div>
 				<div id="dictionary" class="content tab-pane fade">Conceptos b&aacute;sicos</div>
 				<div id="news" class="content tab-pane fade">Novedades</div>
@@ -105,8 +134,9 @@ body {
 		<div>
 			<div id="menu" align="center">
 				<nav>
-					<a href="salamendoza/Grid.html" target="_blank"><img src="images/yellow.png">PICTUNES</a> |
-					<a href="faq.html" class="active_link"><img src="images/blue.png">SOPORTE</a> <!--|
+					<a href="faq.html"><img src="images/blue.png">SUPPORT</a> |
+					<a href="salamendoza/Grid.html" target="_blank"><img src="images/yellow.png">SALA MENDOZA PRESENTATION</a>
+					<!--|
 					<a href="salamendoza/Grid.html" target="_blank"><img src="images/pink.png">CONT&Aacute;TANOS </a>-->
 				</nav>
 			</div>
