--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@ body {
 		<div>
 			<div id="menu" align="center">
 				<nav>
-					<a href="salamendoza/Grid.html" target="_blank"><img src="images/yellow.png">SALA MENDOZA PRESENTATION</a> |
-					<a href="faq.html"><img src="images/blue.png">SUPPORT</a> <!--|
+					<a href="faq.html"><img src="images/blue.png">SUPPORT</a> |
+					<a href="salamendoza/Grid.html" target="_blank"><img src="images/yellow.png">SALA MENDOZA PRESENTATION</a>
+					<!--|
 					<a href="salamendoza/Grid.html" target="_blank"><img src="images/pink.png">CONT&Aacute;TANOS </a>-->
 				</nav>
 			</div>
