--- a/faq.html
+++ b/faq.html
@@ -84,47 +84,9 @@ body {
 					<br><br>
 					<h5>How can I share my pictunes?</h5>
 					At this moment, we are developing new functions so that you can share your 
-					Pictunes in our social network and in other communities as well, such as Twitter, Instagram 
-					and Facebook. Furthermore, you will be able to store each Pictune you make in your 
+					pictunes in our social network and in other communities as well, such as Twitter, Instagram 
+					and Facebook. Furthermore, you will be able to store each pictune you make in your 
 					mobile phone.
-					<!--
-					<h4>PREGUNTAS FRECUENTES (FAQ)</h4><br>
-					Esta es una breve lista de las preguntas m&aacute;s frecuentes que recibimos. Para<br>
-					obtener informaci&oacute;n sobre Pictune, o si necesitas comunicarte con nosotros, por favor<br>
-					escribe a <a href="mailto:contact@pictune.me" target="_top">contact@pictune.me</a>.
-					<br><br>
-					<h5>&iquest;Qu&eacute; es Pictune?</h5>
-					Pictune es una forma r&aacute;pida, genial y divertida de componer musica a traves de imagenes.<br>
-					Toma una foto y oye como suena. Es una nueva manera de ver y escuchar el mundo.<br>
-					Define como suena este instante.<br>
-					Actualmente, estamos desarrollando m&aacute;s funcionalidades, as&iacute; podr&aacute;s intervenir las<br>
-					im&aacute;genes con filtros o dibujos. Adicionalmente, deseamos que compartas tus creaciones<br>
-					con otras personas alrededor del mundo. Por ello tambi&eacute;n estamos creando una red<br>
-					social donde ser&aacute; f&aacute;cil publicar tus Pictunes y ver los Pictunes de tus amigos.<br>
-					En Pictune estamos trabajando para que puedas experimentar momentos especiales<br>
-					a trav&eacute;s de im&aacute;genes y m&uacute;sica.
-					<br><br>
-					<h5>&iquest;Cu&aacute;nto cuesta?</h5>
-					US$ 0.00- Est&aacute; disponible gratis en el App Store de Apple.
-					<br><br>
-					<h5>&iquest;C&oacute;mo surgi&oacute; la idea?</h5>
-					Nos gusta tomar fotograf&iacute;as y amamos la m&uacute;sica. Creemos que<br>
-					la m&uacute;sica es un lenguaje universal que podemos usar para comunicar sin palabras.<br>
-					Normalmente para componer necesitamos conocimiento t&aacute;cnico, y a&ntilde;os de estudio.<br>
-					Pictune es una manera f&aacute;cil de acercar a cualquier persona a la composici&oacute;n musical.<br>
-					A trav&eacute;s de algo tan simple como tomar una foto con tu dispositivo m&oacute;vil y editarla, <br>
-					cualquier persona puede componer m&uacute;sica.<br>
-					En Pictune queremos responder esta pregunta: C&oacute;mo suena este instante?
-					<br><br>
-					<h5>&iquest;C&oacute;mo puedo compartir mis Pictunes?</h5>
-					En este mometo, estamos trabando en nuevas funciones para que puedas compartir tus <br>
-					Pictunes tanto en nuestra red social como en Twitter, Instagram y Facebook. <br> 
-					Adem&aacute;s, podr&aacute;s conservar cada Pictune que crees en la galer&iacute;a de tu celular.
-					<br><br>
-					<h5>&iquest;Estamos buscando talento?</h5>
-					Claro que s&iacute;! Si eres un ingeniero o dise&ntilde;ador talentoso, nos guatar&iacute;a hablar<br>
-					contigo. La mejor forma de contactarnos es enviando un email a: <a href="mailto:contact@pictune.me" target="_top">contact@pictune.me</a>
-					-->
 				</div>
 				<div id="dictionary" class="content tab-pane fade">Conceptos b&aacute;sicos</div>
 				<div id="news" class="content tab-pane fade">Novedades</div>
