--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
 			<div class="col-md-2 hidden-xs" align="center">
 				<section>
 					<ul id="social">
-						<li><a href="https://www.facebook.com/PictuneApp" target="_blank"><img src="images/icons/Bfacebook.png"></a></li>
+						<li><a href="https://www.facebook.com/Pictuneapp" target="_blank"><img src="images/icons/Bfacebook.png"></a></li>
 						<li><a href="https://www.youtube.com/user/PictuneMe/" target="_blank"><img src="images/icons/Byoutube.png"></a></li>
 						<li><a href="https://twitter.com/pictuneApp" target="_blank"><img src="images/icons/Btwitter.png"></a></li>
 						<li><a href="https://instagram.com/pictuneApp" target="_blank"><img src="images/icons/Binstagram.png"></a>
