Corregido URL a page de Facebook

--- a/faq.html
+++ b/faq.html
@@ -29,7 +29,7 @@ body {
 			<div class="col-md-2" align="center">
 				<section>
 					<ul id="social">
-						<li><a href="https://www.facebook.com/PictuneApp" target="_blank"><img src="images/icons/Bfacebook.png"></a></li>
+						<li><a href="https://www.facebook.com/Pictuneapp" target="_blank"><img src="images/icons/Bfacebook.png"></a></li>
 						<li><a href="https://www.youtube.com/user/PictuneMe/" target="_blank"><img src="images/icons/Byoutube.png"></a></li>
 						<li><a href="https://twitter.com/pictuneApp" target="_blank"><img src="images/icons/Btwitter.png"></a></li>
 						<li><a href="https://instagram.com/pictuneApp" target="_blank"><img src="images/icons/Binstagram.png"></a></li>
