Cambiada redaccion FAQ

--- a/faq.html
+++ b/faq.html
@@ -60,19 +60,16 @@ body {
 			</div>
 			<div  class="col-md-7 tab-content">
 				<div id="faq" class="content tab-pane fade in active">
-					<h4>FREQUENTLY ASKED QUESTIONS (FAQ)</h4><br>
-					<h5>What is Pictune?</h5>
-					Pictune is a quick, great and fun way of composing music through images. 
-					Take a picture and listen how it sounds. It is a new way of seeing and 
-					listening to the world. 
-					Currently, we are developing more functions into Pictune, so that you can 
-					compose the music that feels just right to you. Additionally, we wish you to 
-					share your creations with other people around the world. That is why we 
-					are also building a social network where it will be easy to publish your pictunes
-					and see your friend’s pictunes. 
+					<h4>FREQUENTLY ASKED QUESTIONS (FAQ)</h4>
+					We are asked many questions about Pictune all the time. Here's a list of the most frequent ones. If you have any question or require any help, you can <a href="mailto:contact@pictune.me" target="_blank">contact us</a>.
 					<br><br>
-					<h5>How much does it cost?</h5>
-					Pictune is available for free at Apple’s App Store.
+					<h5>What is Pictune?</h5>
+					<p>﻿Pictune is a new language to communicate through images and music. Pictune turns your photos through a creative process into music clips, that you can share with your friends. You can choose the style of the music as well as the emotion you want to express.
+
+					<p>You can think of Pictune as a tool who anyone – not just those with music skills – can use to create music. In Pictune, you make the same sort of decisions a composer makes when he or she is creating music, such as setting the composition style, instruments and mood, but you do so through a very intuitive process that doesn't require extensive musical knowledge.
+					<br><br>
+					<h5>Is Pictune free?</h5>
+					Pictune is completely free. You can get it at no cost at Apple's <a href="https://geo.itunes.apple.com/us/app/pictune-app/id983298331?mt=8" target="_blank">App Store</a>.
 					<br><br>
 					<h5>How did the idea come up?</h5>
 					We love to take pictures and we love music. We believe that music is 
