--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@ body {
 						<li><a href="https://www.facebook.com/Pictuneapp" target="_blank"><img src="images/icons/Bfacebook.png"></a></li>
 						<li><a href="https://www.youtube.com/user/PictuneMe/" target="_blank"><img src="images/icons/Byoutube.png"></a></li>
 						<li><a href="https://twitter.com/pictuneApp" target="_blank"><img src="images/icons/Btwitter.png"></a></li>
-						<li><a href="https://instagram.com/pictuneApp" target="_blank"><img src="images/icons/Binstagram.png"></a>
-						</li>
+						<li><a href="https://instagram.com/pictuneApp" target="_blank"><img src="images/icons/Binstagram.png"></a></li>
 						<li><a href="mailto:contact@pictune.me" target="_blank"><img src="images/icons/Bemail.png"></a></li>
 					</ul>
 				</section>
@@ -45,30 +44,31 @@ body {
 			<div id="store" class="col-md-3" align="center">
 				<a href="https://geo.itunes.apple.com/us/app/pictune-app/id983298331?mt=8" target="itunes_store"></a>
 			</div>
-			<div id="iphone" class="col-md-7" align="center">
-				<img class="img-responsive" src="images/view1.png">
-				<img class="img-responsive" src="images/view2.png">
-				<img class="img-responsive" src="images/view3.png">
-				<img class="img-responsive" src="images/view4.png">
-				<img class="img-responsive" src="images/view5.png">
-				<p id="description">
-					Take a picture, change its aspect, listen how it sounds and share it on Pictune.<br>
-					It’s a new way of seeing and listening to the world.
-				</p>
+			<a href="https://geo.itunes.apple.com/us/app/pictune-app/id983298331?mt=8" target="itunes_store">
+			<div id="iphone" class="col-md-3" align="center">
+				<img class="img-responsive" src="images/iphone000.jpg">
+				<img class="img-responsive" src="images/iphone001.jpg">
+				<img class="img-responsive" src="images/iphone002.jpg">
+				<img class="img-responsive" src="images/iphone003.jpg">
+				<img class="img-responsive" src="images/iphone004.jpg">
         	</div>
-        	<div class="col-md-2 visible-xs-block" align="center">
+        	</a>
+        	<div class="col-md-3 visible-xs-block" align="center">
 				<section>
 					<ul id="social">
-						<li><a href="https://www.facebook.com/PictuneApp" target="_blank"><img src="images/icons/Bfacebook.png"></a></li>
+						<li><a href="https://www.facebook.com/Pictuneapp" target="_blank"><img src="images/icons/Bfacebook.png"></a></li>
 						<li><a href="https://www.youtube.com/user/PictuneMe/" target="_blank"><img src="images/icons/Byoutube.png"></a></li>
 						<li><a href="https://twitter.com/pictuneApp" target="_blank"><img src="images/icons/Btwitter.png"></a></li>
-						<li><a href="https://instagram.com/pictuneApp" target="_blank"><img src="images/icons/Binstagram.png"></a>
-						</li>
+						<li><a href="https://instagram.com/pictuneApp" target="_blank"><img src="images/icons/Binstagram.png"></a></li>
 						<li><a href="mailto:contact@pictune.me" target="_blank"><img src="images/icons/Bemail.png"></a></li>
 					</ul>
 				</section>
 			</div>
     	</div>
+		<p id="description" align="center">
+			Take a picture, change its aspect, listen how it sounds and share it on Pictune.<br>
+			It’s a new way of seeing and listening to the world.
+		</p>
 		<div class="row">
 		<div>
 			<div id="menu" align="center">
